Fix quote text-align & font-family

--- a/assets/scss/_custom/custom.scss
+++ b/assets/scss/_custom/custom.scss
@@ -28,7 +28,7 @@
 p#div-danger, p#div-warning, p#div-success, p#div-info, p#div-primary, p#div-default {
     padding: 0.5em 1em;
     border-left: 3px solid;
-    text-align: left;
+    font-family: 'EB Garamond', 'STKaiti', 'KaiTi', 'SimKai', 'Noto Serif SC', serif;
 }
 p#div-danger {
     background: var(--color-div-danger-bg);
